// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectField /> should add a value when focus out if allowArbitraryItems is true 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow arbitrary values 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item 4"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to be used with a FieldControl 1`] = `
<div>
  <label
    class="junipero label invalid"
    for="name"
  >
    Name
  </label>
  <div
    class="junipero dropdown select-field dirty invalid searchable"
    id="name"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-activedescendant="1"
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Linda"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="junipero abstract invalid"
  >
    Enter your name
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear a single value 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear a single value 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear multiple values at once 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable multiple"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to clear multiple values at once 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable empty multiple"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 4
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 3`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 4`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 5`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to delete items when hitting backspace 6`] = `
<div>
  <div
    class="junipero dropdown opened select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to load more data on scroll: After scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="dropdown-item"
            id="3"
            role="option"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="dropdown-item"
            id="4"
            role="option"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="dropdown-item"
            id="5"
            role="option"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="dropdown-item"
            id="6"
            role="option"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="dropdown-item"
            id="7"
            role="option"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="dropdown-item"
            id="8"
            role="option"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="dropdown-item"
            id="9"
            role="option"
          >
            <a>
              Item 10
            </a>
          </li>
          <li
            class="dropdown-item"
            id="10"
            role="option"
          >
            <a>
              Item 11
            </a>
          </li>
          <li
            class="dropdown-item"
            id="11"
            role="option"
          >
            <a>
              Item 12
            </a>
          </li>
          <li
            class="dropdown-item"
            id="12"
            role="option"
          >
            <a>
              Item 13
            </a>
          </li>
          <li
            class="dropdown-item"
            id="13"
            role="option"
          >
            <a>
              Item 14
            </a>
          </li>
          <li
            class="dropdown-item"
            id="14"
            role="option"
          >
            <a>
              Item 15
            </a>
          </li>
          <li
            class="dropdown-item"
            id="15"
            role="option"
          >
            <a>
              Item 16
            </a>
          </li>
          <li
            class="dropdown-item"
            id="16"
            role="option"
          >
            <a>
              Item 17
            </a>
          </li>
          <li
            class="dropdown-item"
            id="17"
            role="option"
          >
            <a>
              Item 18
            </a>
          </li>
          <li
            class="dropdown-item"
            id="18"
            role="option"
          >
            <a>
              Item 19
            </a>
          </li>
          <li
            class="dropdown-item"
            id="19"
            role="option"
          >
            <a>
              Item 20
            </a>
          </li>
          <div
            class="load-more"
          >
            <li
              class="dropdown-item no-more-options"
              role="option"
            >
              🎉 No more options
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to load more data on scroll: Before scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="dropdown-item"
            id="3"
            role="option"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="dropdown-item"
            id="4"
            role="option"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="dropdown-item"
            id="5"
            role="option"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="dropdown-item"
            id="6"
            role="option"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="dropdown-item"
            id="7"
            role="option"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="dropdown-item"
            id="8"
            role="option"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="dropdown-item"
            id="9"
            role="option"
          >
            <a>
              Item 10
            </a>
          </li>
          <div
            class="load-more"
          />
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to load more data on scroll: During scroll 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Type a name"
        role="combobox"
        size="11"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu loading"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
          <li
            class="dropdown-item"
            id="3"
            role="option"
          >
            <a>
              Item 4
            </a>
          </li>
          <li
            class="dropdown-item"
            id="4"
            role="option"
          >
            <a>
              Item 5
            </a>
          </li>
          <li
            class="dropdown-item"
            id="5"
            role="option"
          >
            <a>
              Item 6
            </a>
          </li>
          <li
            class="dropdown-item"
            id="6"
            role="option"
          >
            <a>
              Item 7
            </a>
          </li>
          <li
            class="dropdown-item"
            id="7"
            role="option"
          >
            <a>
              Item 8
            </a>
          </li>
          <li
            class="dropdown-item"
            id="8"
            role="option"
          >
            <a>
              Item 9
            </a>
          </li>
          <li
            class="dropdown-item"
            id="9"
            role="option"
          >
            <a>
              Item 10
            </a>
          </li>
          <div
            class="load-more"
          >
            <li
              class="dropdown-item loader"
              role="option"
            >
              <div
                class="junipero spinner primary small"
              />
              Loading more options...
            </li>
          </div>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to render without a placeholder 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to reset the field 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-activedescendant="1"
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="David"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to reset the field 2`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-activedescendant="1"
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="John"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an existing value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an existing value 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an external value 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 4
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to search for an external value 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Item 4"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should allow to use object options and display custom titles on a controlled field 1`] = `
<div>
  <p>
    Value: 
    item-3
  </p>
  <div
    class="junipero dropdown select-field dirty valid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-activedescendant="2"
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should be invalid if validation fails 1`] = `
<div>
  <div
    class="junipero dropdown select-field dirty invalid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Item 1"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should correctly update state values 1`] = `
<div>
  <label
    class="junipero label info"
  >
    Test
  </label>
  <div
    class="junipero text-field dirty valid"
  >
    <input
      class="field"
      id="textfield"
      placeholder="Test"
      type="text"
      value="Test123"
    />
  </div>
  <div
    class="junipero dropdown select-field dirty valid searchable"
    id="selectfield"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-activedescendant="2"
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Item 3"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not allow to change value when disabled 1`] = `
<div>
  <div
    class="junipero dropdown disabled select-field pristine valid searchable"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        readonly=""
        role="combobox"
        type="text"
        value="Marc"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not remove field previous values while hitting backspace, if search isnt empty 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value="Item"
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not remove field previous values while hitting backspace, if search isnt empty 2`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable multiple"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info selected"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not toggle on click if disabled: opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not toggle on click if disabled: still opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not toggle on click if searchable: opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should not toggle on click if searchable: still opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render multiple values 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid searchable multiple"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 2
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render multiple values 2`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should render multiple values 3`] = `
<div>
  <div
    class="junipero dropdown select-field dirty valid searchable multiple"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <span
        class="junipero tag info"
      >
        <span>
          Item 1
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <span
        class="junipero tag info"
      >
        <span>
          Item 3
        </span>
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
      </span>
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon remove"
          height="10"
          viewBox="0 0 9 10"
          width="10"
        >
          <path
            d="M8 1.5L1 8.5"
          />
          <path
            d="M1 1.5L8 8.5"
          />
        </svg>
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on click if enabled: closed 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on click if enabled: opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on click if not searchable: closed 1`] = `
<div>
  <div
    class="junipero dropdown select-field pristine valid empty"
  >
    <div
      class="field dropdown-toggle"
      id="dropdown-toggle"
    >
      <input
        aria-expanded="false"
        aria-haspopup="listbox"
        disabled=""
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on click if not searchable: opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        disabled=""
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on keyboard if enabled: back opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on keyboard if enabled: closed 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<SelectField /> should toggle on keyboard if enabled: opened 1`] = `
<div>
  <div
    class="junipero dropdown opened select-field pristine valid searchable empty"
  >
    <div
      class="field dropdown-toggle opened"
      id="dropdown-toggle"
    >
      <input
        aria-controls=""
        aria-expanded="true"
        aria-haspopup="listbox"
        placeholder="Name"
        role="combobox"
        size="10"
        type="text"
        value=""
      />
      <div
        class="icons"
      >
        <svg
          class="junipero icon arrows"
          height="13"
          viewBox="0 0 8 13"
          width="8"
        >
          <path
            d="M1 4.5L4 1.5L7 4.5"
          />
          <path
            d="M1 8.5L4 11.5L7 8.5"
          />
        </svg>
      </div>
    </div>
    <div
      aria-labelledby="dropdown-toggle"
      class="junipero dropdown-menu select-menu"
      data-floating-ui-focusable=""
      role="listbox"
      style="position: fixed; top: 10px; left: 0px;"
      tabindex="0"
    >
      <ul
        class="menu-inner"
      >
        <div
          class="content"
        >
          <li
            class="dropdown-item"
            id="0"
            role="option"
          >
            <a>
              Item 1
            </a>
          </li>
          <li
            class="dropdown-item"
            id="1"
            role="option"
          >
            <a>
              Item 2
            </a>
          </li>
          <li
            class="dropdown-item"
            id="2"
            role="option"
          >
            <a>
              Item 3
            </a>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;
